# gasoline-mcp-ai-devtools

./: .clinerules  .codacy.yml  .coherence-ignore  .env.example  .gasoline.json  .gitignore  .gitmodules  .golangci.yml  .kaboom.json  .prettierignore  .prettierrc  .vale.ini  7890  AGENT-SETUP-GUIDE.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_QUALITY_REPORT.md  COMPREHENSIVE_UAT_REPORT.md  CONTRIBUTING.md  DISTRIBUTION-SETUP.md  KNOWN-ISSUES.md  LICENSE-ARTWORK  Makefile  PUBLISHING_SUMMARY.md  README.md  REBRAND_PLAN.md  RELEASE.md  SESSION_SUMMARY.md  SPARKY-QUICK-START.md  UAT-CHECKLIST.md  WORK_COMPLETE.md  demo-flame-visual.html  eslint-report.json  eslint.config.js  flame-demo-fresh.html  gasoline-code-standards.md  gasoline-mcp  go.mod  (+18 more)
.astro/: content.d.ts
.coherence/: endpoint-inventory.json
.coherence-data/: endpoint-inventory.json
.github/: dependabot.yml  pull_request_template.md
.kaboom/: decisions.json
benchmarks/: latest-benchmark.md
blazetorch.dev/: astro.config.mjs
claude_skill/: README.md  install.sh
cookwithgasoline.com/: .env.example  astro.config.mjs  package.json
demo/: DEMO-GUIDE.md  package-lock.json  package.json  tailwind.config.ts  ws-server.mjs
docs/: .gitignore  0.8.0-pre-release-bugs.md  0.8.0-second-review.md  2026-02-23-architecture-findings.md  404.md  5.4-todo.md  CNAME  DAEMON_CLEANUP.md  DEVELOPMENT.md  FILE-ORGANIZATION-SUMMARY.md  Gemfile  QA-UX-FIX-PLAN.md  README.md  ROADMAP-REORGANIZATION.md  ROADMAP-STRATEGY-ANALYSIS.md  STARTUP-OPTIMIZATION-COMPLETE.md  UAT-TEST-PLAN.md  V6-TESTSPRITE-COMPETITION.md  _config.yml  accessibility-audit.md  agent-install-guide.md  alternatives.md  api-schema.md  articles-image-backlog-2026-03-03.md  async-queue-correlation-tracking.md  blog.md  brand-guidelines.md  codacy-analysis-2026-02-09.md  codacy-issues-2026-02-11_1634.md  codacy-issues-current.md  codex-feedback-rfc.md  competitive-analysis.md  competitors.md  configuration.md  cross-reference.md  developer-api.md  dom-queries.md  eval-open-questions.md  features.md  filename-standardization-complete.md  (+48 more)
e2e-tests/: console-capture.spec.js  feature-toggles.spec.js  mcp-http.spec.js  package-lock.json  package.json  performance-budget.spec.js  phase4-features.spec.js  pilot-features.spec.js  playwright.config.js  popup-status.spec.js  v5-features.spec.js  websocket-capture.spec.js  websocket-status.spec.js
extension-tests/: ai-context.test.js  background.test.js  capture-control.test.js  circuit-breaker.test.js  content.test.js  dom-snapshot.test.js  helpers.js  inject.test.js  interception-deferral.test.js  memory.test.js  network-bodies.test.js  network-body-e2e.test.js  network-waterfall.test.js  on-demand.test.js  options.test.js  performance-marks.test.js  performance-snapshot.test.js  performance.test.js  pilot-execute.test.js  pilot-highlight.test.js  pilot-state.test.js  popup.test.js  (+5 more)
pypi/gasoline-agentic-browser-darwin-x64/: MANIFEST.in  README.md  pyproject.toml
pypi/gasoline-agentic-browser-darwin-x64/gasoline_agentic_browser_darwin_x64/: __init__.py
pypi/gasoline-agentic-browser-darwin-x64/gasoline_agentic_browser_darwin_x64.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pypi/gasoline-agentic-browser-linux-arm64/: MANIFEST.in  README.md  pyproject.toml
pypi/gasoline-agentic-browser-linux-arm64/gasoline_agentic_browser_linux_arm64/: __init__.py
pypi/gasoline-agentic-browser-linux-arm64/gasoline_agentic_browser_linux_arm64.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pypi/gasoline-agentic-browser-linux-x64/: MANIFEST.in  README.md  pyproject.toml
pypi/gasoline-agentic-browser-linux-x64/gasoline_agentic_browser_linux_x64/: __init__.py
pypi/gasoline-agentic-browser-linux-x64/gasoline_agentic_browser_linux_x64.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pypi/gasoline-agentic-browser-win32-x64/: MANIFEST.in  README.md  pyproject.toml
pypi/gasoline-agentic-browser-win32-x64/gasoline_agentic_browser_win32_x64/: __init__.py
pypi/gasoline-agentic-browser-win32-x64/gasoline_agentic_browser_win32_x64.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pypi/kaboom-agentic-browser/: README.md  pyproject.toml
pypi/kaboom-agentic-browser-darwin-arm64/: MANIFEST.in  README.md  pyproject.toml
pypi/kaboom-agentic-browser-darwin-arm64/kaboom_agentic_browser_darwin_arm64/: __init__.py
pypi/kaboom-agentic-browser-darwin-arm64/kaboom_agentic_browser_darwin_arm64.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pypi/kaboom-agentic-browser-linux-arm64/: MANIFEST.in  README.md  pyproject.toml
pypi/kaboom-agentic-browser-linux-arm64/kaboom_agentic_browser_linux_arm64/: __init__.py
pypi/kaboom-agentic-browser-linux-arm64/kaboom_agentic_browser_linux_arm64.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pypi/kaboom-agentic-browser-linux-x64/: MANIFEST.in  README.md  pyproject.toml
pypi/kaboom-agentic-browser-linux-x64/kaboom_agentic_browser_linux_x64/: __init__.py
pypi/kaboom-agentic-browser-linux-x64/kaboom_agentic_browser_linux_x64.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pypi/kaboom-agentic-browser/kaboom_agentic_browser/: __init__.py  __main__.py  config.py  doctor.py  errors.py  install.py  output.py  platform.py  skills.py  uninstall.py
pypi/kaboom-agentic-browser/kaboom_agentic_browser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pypi/kaboom-agentic-browser/kaboom_agentic_browser/skills/: skills.json
pypi/kaboom-agentic-browser/kaboom_agentic_browser/skills/debug/: SKILL.md
pypi/kaboom-agentic-browser/kaboom_agentic_browser/skills/demo/: SKILL.md
pypi/kaboom-agentic-browser/kaboom_agentic_browser/skills/performance/: SKILL.md
pypi/kaboom-agentic-browser/kaboom_agentic_browser/skills/release-readiness/: SKILL.md
pypi/kaboom-agentic-browser/kaboom_agentic_browser/skills/security-redaction/: SKILL.md
pypi/kaboom-agentic-browser/kaboom_agentic_browser/skills/site-audit/: SKILL.md
pypi/kaboom-agentic-browser/tests/: test_branding.py  test_config.py  test_install.py  test_platform_cleanup.py  test_skills.py  test_uninstall.py
(+6182 files in other folders)
