[project]
name = "gasoline-agentic-browser-linux-arm64"
version = "0.7.11"
description = "Gasoline Agentic Browser binary for linux-arm64"
requires-python = ">=3.8"
license = "AGPL-3.0-only"
authors = [
    {name = "Brennan Hill", email = "noreply@cookwithgasoline.com"}
]

[project.urls]
Homepage = "https://cookwithgasoline.com"
Repository = "https://github.com/brennhill/gasoline-agentic-browser-devtools-mcp"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gasoline_agentic_browser_linux_arm64"]
package-data = {"gasoline_agentic_browser_linux_arm64" = ["gasoline*"]}
