[project]
name = "gasoline-agentic-browser-linux-x64"
version = "0.8.1"
description = "Gasoline Agentic Browser binary for linux-x64"
requires-python = ">=3.8"
license = "AGPL-3.0-only"
authors = [
    {name = "Brennan Hill", email = "noreply@cookwithgasoline.com"}
]

[project.urls]
Homepage = "https://cookwithgasoline.com"
Repository = "https://github.com/brennhill/gasoline-agentic-browser-devtools-mcp"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gasoline_agentic_browser_linux_x64"]
package-data = {"gasoline_agentic_browser_linux_x64" = ["gasoline*"]}
