[project]
name = "kaboom-agentic-browser-darwin-arm64"
version = "0.8.1"
description = "Kaboom Agentic Browser binary for darwin-arm64"
requires-python = ">=3.8"
license = "AGPL-3.0-only"
authors = [
    {name = "Brennan Hill", email = "noreply@gokaboom.dev"}
]

[project.urls]
Homepage = "https://gokaboom.dev"
Repository = "https://github.com/brennhill/kaboom-agentic-browser-devtools-mcp"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kaboom_agentic_browser_darwin_arm64"]
package-data = {"kaboom_agentic_browser_darwin_arm64" = ["kaboom*"]}
